import values and formulas from lotus-123, fdo#55066

Change-Id: Ia403c849ef537c7f7804f907889110b8096c0bb6